--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -3,4 +3,203 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="_app_name">AutoJs</string>
+    <string name="text_accessibility_service_description">使脚本自动操作(点击、长按、滑动等)所需，若关闭则只能执行不涉及自动操作的脚本。</string>
+    <string name="text_new_file">新建文件</string>
+    <string name="text_import_from_file">从文件导入</string>
+    <string name="text_create_fail">创建失败</string>
+    <string name="text_please_input_name">请输入名称</string>
+    <string name="text_name">名称</string>
+    <string name="text_go_to_setting">去设置</string>
+    <string name="explain_accessibility_permission">软件需要打开\"无障碍服务\"才能运行，请在随后的设置中选择\"AutoJs\"并开启服务。\n您也可以稍后在侧拉菜单中设置。</string>
+    <string name="text_cancel">取消</string>
+    <string name="text_path_is_empty">路径为空</string>
+    <string name="text_file_not_exists">文件不存在</string>
+    <string name="text_no_file_rw_permission">无文件读写权限</string>
+    <string name="text_no_accessibility_permission">无障碍服务未启动，脚本已停止运行</string>
+    <string name="text_drawer_close">关闭侧拉菜单</string>
+    <string name="text_drawer_open">打开侧拉菜单</string>
+    <string name="text_undo">撤销</string>
+    <string name="text_redo">重做</string>
+    <string name="text_save">保存</string>
+    <string name="text_run">运行</string>
+    <string name="text_alert">提示</string>
+    <string name="edit_exit_without_save_warn">内容尚未保存，您确定要退出吗？</string>
+    <string name="text_save_and_exit">保存并退出</string>
+    <string name="text_exit_directly">直接退出</string>
+    <string name="text_setting">设置</string>
+    <string name="text_exit">退出</string>
+    <string name="text_auto_operate_service">无障碍服务</string>
+    <string name="text_syntax_and_api">帮助</string>
+    <string name="text_close_all_running_scripts">关闭所有正在运行的脚本</string>
+    <string name="text_about">关于</string>
+    <string name="text_licenses">开放源代码许可</string>
+    <string name="text_do_not_remind_again">不再提示</string>
+    <string name="copyright">Copyright©2016 All right reserves.</string>
+    <string name="developer">星尘幻影</string>
+    <string name="qq">2732014414</string>
+    <string name="email">hybbbb1996@gmail.com</string>
+    <string name="github">软件源代码</string>
+    <string name="text_already_copy_to_clip">已复制到剪贴板</string>
+    <string name="donate_developer">打赏作者</string>
+    <string name="my_github">https://github.com/hyb1996/NoRootScriptDroid</string>
+    <string name="share_app">[AutoJs]下载地址：http://www.coolapk.com/apk/com.stardust.scriptdroid </string>
+    <string name="text_floating_window">悬浮窗</string>
+    <string name="text_error_report">错误报告</string>
+    <string name="text_press_again_to_exit">再按一次退出程序</string>
+    <string name="text_common_function">常用函数</string>
+    <string name="sorry_for_crash">很抱歉(ಥ _ ಥ)程序遇到未知错误，即将停止运行\n错误代码：</string>
+    <string name="text_no_running_script">没有正在运行的脚本</string>
+    <string name="text_already_stop_n_scripts">已停止%d个正在运行的脚本</string>
+    <string name="text_start_running">开始运行</string>
+    <string name="text_open_by_other_apps">用其他应用打开</string>
+    <string name="text_rename">重命名</string>
+    <string name="text_send_shortcut">创建桌面快捷方式</string>
+    <string name="text_already_create">已创建</string>
+    <string name="text_delete">删除</string>
+    <string name="text_already_delete">已删除</string>
+    <string name="folder_name">/脚本/</string>
+    <string name="text_error">错误</string>
+    <string name="text_load_failed">还没有文档/(ㄒoㄒ)/~~</string>
+    <string name="text_copy_debug_info">复制调试信息</string>
+    <string name="text_it_is_the_developer_of_app">这是软件开发者(。・・)ノ</string>
+    <string name="text_lll">略略略</string>
+    <string name="text_please_choose">请选择</string>
+    <string name="text_crash">崩溃了o(≧口≦)o</string>
+    <string name="crash_feedback">点击\"退出\"退出程序(ಥ _ ಥ)或者提交错误报告或者复制调试信息反馈给开发者(≧∇≦)ﾉ</string>
+    <string name="text_clear">清空</string>
+    <string name="text_console">控制台</string>
+    <string name="text_log">日志</string>
+    <string name="text_report_bug">提交错误报告</string>
+    <string name="text_report_fail">提交失败</string>
+    <string name="text_report_succeed">提交成功</string>
+    <string name="edit_and_run_handle_intent_error">无法处理文件</string>
+    <string name="text_issue_report">问题反馈</string>
+    <string name="text_script_record">录制脚本</string>
+    <string name="text_start_record">开始录制</string>
+    <string name="text_stop_record">停止录制</string>
+    <string name="text_pause_record">暂停录制</string>
+    <string name="text_resume_record">继续录制</string>
+    <string name="text_recorded">录制结束</string>
+    <string name="text_copy_to_clip">复制到剪贴板</string>
+    <string name="text_file_write_fail">文件写入失败</string>
+    <string name="text_join_qq_group">加入QQ交流群</string>
+    <string name="text_copied">已复制到剪贴板</string>
+    <string name="text_use_volume_control_record">使用音量键控制</string>
+    <string name="summary_use_volume_control_record">开启后每次音量变化会开始或停止脚本录制</string>
+    <string name="key_use_volume_control_record">key_use_volume_control_record</string>
+    <string name="text_mobile_qq_not_installed">未安装手机QQ</string>
+    <string name="text_edit">编辑</string>
+    <string name="key_max_length_for_code_completion">key_max_length_for_code_completion</string>
+    <string name="text_max_length_for_code_completion">代码补全最大文件长度</string>
+    <string name="text_file_exists">文件已存在</string>
+    <string name="text_accessibility_service">无障碍服务</string>
+    <string name="text_enable_accessibility_service_by_root">通过Root权限自动启用服务</string>
+    <string name="text_auto_operate_service_enabled_but_not_running">无障碍服务已启用但并未运行，这可能是安卓的BUG，您可能需要重启手机</string>
+    <string name="key_enable_accessibility_service_by_root">key_enable_accessibility_service_by_root</string>
+    <string name="text_enable_accessibility_service_by_root_timeout">使用Root权限启动无障碍服务超时</string>
+    <string name="summary_enable_accessibility_service_by_root">开启后运行脚本会使用Root权限自动开启无障碍服务</string>
+    <string name="text_appearance">外观</string>
+    <string name="text_theme_color">主题色</string>
+    <string name="text_select_image">选择图片</string>
+    <string name="text_help">帮助</string>
+    <string name="text_root_script_record">录制脚本(root)</string>
+    <string name="text_no_floating_window_permission">没有悬浮窗权限</string>
+    <string name="text_layout_hierarchy">布局层次分析</string>
+    <string name="text_layout_bounds">布局范围查看</string>
+    <string name="text_no_accessibility_permission_to_capture">无障碍服务未启动</string>
+    <string name="text_sample_script">示例脚本</string>
+    <string name="text_my_script">我的脚本</string>
+    <string name="hint_no_script">点击右上角新建第一个脚本吧~(。・・)ノ</string>
+    <string name="text_reset_background">重置背景图片设置</string>
+    <string name="text_record_with_root">使用root权限录制</string>
+    <string name="text_record_msg">录制提示</string>
+    <string name="text_text_changed">文字改变</string>
+    <string name="text_scrolled">滑动</string>
+    <string name="text_long_clicked">长按</string>
+    <string name="text_clicked">点击</string>
+    <string name="text_open_launcher">打开主界面</string>
+    <string name="text_copy_to_my_scripts">导入到我的脚本</string>
+    <string name="text_import_succeed">导入成功</string>
+    <string name="text_no_root_script_record">免Root脚本录制</string>
+    <string name="text_script_record_with_root">Root脚本录制</string>
+    <string name="text_use_key_to_start_record">开始录制按键</string>
+    <string name="text_use_key_to_stop_record">结束录制按键</string>
+    <string name="text_none">NONE</string>
+    <string name="key_start_record_trigger">key_start_record_trigger</string>
+    <string name="key_stop_record_trigger">key_stop_record_trigger</string>
+    <string name="text_current_activity">当前活动:</string>
+    <string name="text_current_package">当前应用包名:</string>
+    <string name="go_to_accessibility_settings"><![CDATA[请打开设置->无障碍服务->AutoJs并开启]]></string>
+    <string name="text_script_running">脚本运行</string>
+    <string name="key_use_volume_control_running">key_use_volume_control_running</string>
+    <string name="text_use_volume_to_stop_running">每次音量键变化停止所有脚本</string>
+    <string name="text_need_to_enable_accessibility_service">需要启用无障碍服务</string>
+    <string name="key_run_mode">运行方式</string>
+    <string name="text_on">已开启</string>
+    <string name="text_off">已关闭</string>
+    <string name="text_task_manage">任务管理</string>
+    <string name="text_name_should_not_be_empty">名称不能为空</string>
+    <string name="text_new_directory">新文件夹</string>
+    <string name="text_import_fail">导入失败</string>
+    <string name="delete_confirm">确定要删除吗</string>
+    <string name="text_no_brower">没有浏览器耶o(╯□╰)o快去安装一个吧</string>
+    <string name="text_please_choose_file_to_import">请选择要导入的脚本</string>
+    <string name="text_refresh">刷新</string>
+    <string name="notice_no_running_script"><![CDATA[没有正在运行的脚本 φ(>ω<*)]]></string>
+    <string name="text_please_choose_a_script">请选择脚本</string>
+    <string name="text_edit_prepare_script">编辑预执行脚本</string>
+    <string name="text_pre_execute_script">预执行脚本</string>
+    <string name="text_clear_pre_execute_script">清空预执行脚本</string>
+    <string name="text_clear_file_selection">重置脚本文件选择</string>
+    <string name="summary_pre_execute_script">将在脚本文件执行前执行</string>
+    <string name="text_checking_update">正在检查更新</string>
+    <string name="text_new_version">新版本</string>
+    <string name="text_check_update_error">检查更新失败Orz</string>
+    <string name="text_check_update">检查更新</string>
+    <string name="text_is_latest_version">已经是最新版本</string>
+    <string name="text_version_too_old">版本过低</string>
+    <string name="warning_version_too_old">当然版本为公测版，显现和潜在的问题很多，不再适合继续使用，</string>
+    <string name="text_update">更新</string>
+    <string name="text_release_notes">更新日志</string>
+    <string name="text_download_url">下载地址</string>
+    <string name="text_directly_download">直接下载</string>
+    <string name="text_downloading">下载中</string>
+    <string name="text_download_failed">下载失败~请到应用商店下载</string>
+    <string name="text_do_not_ask_again_for_this_version">此版本不再提示</string>
+    <string name="text_code_beautify">格式化代码</string>
+    <string name="text_processing">处理中</string>
+    <string name="text_already_reset">已重置</string>
+    <string name="text_guard_mode">保护模式</string>
+    <string name="summary_guard_mode">在本软件界面无法运行自动操作命令以免误触</string>
+    <string name="key_guard_mode">key_guard_mode</string>
+    <string name="text_layout_inspector_is_dumping">布局分析中，请稍后点击</string>
+    <string name="text_force_stop">强制停止</string>
+    <string name="text_execution_finished" formatted="false">\n------------\n[%s]运行结束，用时%f秒</string>
+    <string name="text_record_format_error">录制格式错误</string>
+    <string name="text_again">又</string>
+    <string name="text_again_and_again">又双</string>
+    <string name="text_again_and_again_again">又双叒</string>
+    <string name="text_again_and_again_again_again">又双叒叕</string>
+    <string name="debug">连接电脑</string>
+    <string name="text_connected">已连接</string>
+    <string name="text_disconnected">已断开连接</string>
+    <string name="text_server_address">服务器地址</string>
+
+    <string-array name="record_control_keys">
+        <item>无</item>
+        <item>音量上键</item>
+        <item>音量下键</item>
+        <item>照相键</item>
+    </string-array>
+
+    <string-array name="record_control_values">
+        <item>NONE</item>
+        <item>KEY_VOLUMEUP</item>
+        <item>KEY_VOLUMEDOWN</item>
+        <item>KEY_CAMERA</item>
+    </string-array>
+
 </resources>
+
